--- a/sql/evolutions.qrc
+++ b/sql/evolutions.qrc
@@ -6,5 +6,6 @@
         <file>evolutions/3.sql</file>
         <file>evolutions/4.sql</file>
         <file>evolutions/5.sql</file>
+        <file>evolutions/6.sql</file>
     </qresource>
 </RCC>
