Restructure source code
I created folder for model, ui, ui-dialogs, ui-tabs. I don't want to
have nesting but also a clear separation. The big reorg was triggered
by moving all the accounts tab stuff to an extra widget and giving the
tab widgets a base class.

--- a/src/ui-tabs/TransferTab.ui
+++ b/src/ui-tabs/TransferTab.ui
@@ -17,7 +17,7 @@
       <item row="1" column="4">
        <widget class="QLabel" name="lblFilterText">
         <property name="text">
-         <string>Reference &amp; Tags:</string>
+         <string>Search:</string>
         </property>
        </widget>
       </item>
@@ -293,7 +293,7 @@
   <customwidget>
    <class>TagEdit</class>
    <extends>QPlainTextEdit</extends>
-   <header>src/TagEdit.h</header>
+   <header>src/ui/TagEdit.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
