Parse currency more robust and entirely integer based
Add util::parseCurrency which is very robust on automatically handling
different (comma/period) thousand and decimal separators. It also doesn't
rely on double which should prevent and floating point inaccuracies.

--- a/src/ui-tabs/AccountTab.ui
+++ b/src/ui-tabs/AccountTab.ui
@@ -104,6 +104,9 @@
           <property name="suffix">
            <string> €</string>
           </property>
+          <property name="minimum">
+           <double>-999999999.990000009536743</double>
+          </property>
           <property name="maximum">
            <double>999999999.990000009536743</double>
           </property>
