--- a/sql/evolutions.qrc
+++ b/sql/evolutions.qrc
@@ -7,5 +7,6 @@
         <file>evolutions/4.sql</file>
         <file>evolutions/5.sql</file>
         <file>evolutions/6.sql</file>
-    </qresource>
+        <file>evolutions/7.sql</file>
+        </qresource>
 </RCC>
